# my_ebooks_YC

./: .gitignore  Dockerfile  README.md  metadata.yaml  post_ebook_pipeline_optimization_zh.md  pyproject.toml  research_paper.md  talks.json  talks.sample.json
config/: series.json
content/: 01-replit-ceo-amjad-masad-the-future-of-software-creation.md  02-michael-truell-building-cursor-at-23-taking-on-github-copilot-advice-to-engineer.md  03-dylan-field-scaling-figma-and-the-future-of-design.md  04-anthropic-co-founder-jared-kaplan-scaling-and-the-road-to-human-level-ai.md  05-chelsea-finn-building-robots-that-can-do-anything.md  06-nobel-laureate-john-jumper-ai-is-revolutionizing-scientific-discovery.md  07-aravind-srinivas-perplexitys-race-to-build-agentic-search.md  08-ai-andrew-ng-building-faster.md  09-franois-chollet-how-we-get-to-agi.md  10-fei-fei-li-spatial-intelligence-is-the-next-frontier-in-ai.md  11-satya-nadella-microsofts-ai-bets-hyperscaling-quantum-computing-breakthroughs.md  12-sam-altman-the-future-of-openai-chatgpts-origins-and-building-ai-hardware.md  13-elon-musk-digital-superintelligence-multiplanetary-life-how-to-be-useful.md  14-andrej-karpathy-software-is-changing-again.md
content/yc-ai-startup-school/: 000-introduction.md  01-replit-ceo-amjad-masad-the-future-of-software-creation.md  (+8 more)
scripts/: build_book.py  clean_content.py  download_subs.py  enrich_and_clean.py  fetch_transcripts_playwright.py  fetch_yc_ai_startup_school.py  ingest_json.py  make_placeholders.py  polish_chapters.py  tmp_check_transcript.py
src/ebook_pipeline/: __init__.py  (+13 more)
(+16 files in other folders)
