[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-pipeline"
version = "0.1.0"
description = "Offline-first tooling to build eBooks from YouTube transcripts."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "YC AI Startup School Maintainers" }
]
dependencies = [
  "youtube-transcript-api>=0.6.0",
  "Flask>=2.3",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
my-ebook = "ebook_pipeline.cli:main"
my-ebook-web = "ebook_pipeline.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
